changed setting icon color names and added feature to optionally download .json files for use with lute-compile

--- a/options.html
+++ b/options.html
@@ -57,11 +57,26 @@
             <!-- Pandora ZERO -->
             <fieldset class="setting">
                 <label>Pandora ZERO</label>
-                <select id="pz" class="fright">
-                    <option id="pz_enabled" value="true">Enabled</option>
-                    <option id="pz_disabled" value="false">Disabled</option>
+                <select id="pandora-zero" class="fright">
+                    <option value="enabled">Enabled</option>
+                    <option value="disabled">Disabled</option>
                 </select>
             </fieldset>
+            <p class="tip">Removed advertisement banners and gives the additional feature of refreshing skip count.</p>
+        </section>
+        <!-- Advanced -->
+        <section id="advanced">
+            <h3 class="subtitle">Advanced</h3>
+            <!-- Lute Compile -->
+            <fieldset class="setting">
+                <label>Lute-Compile</label>
+                <select id="lute-compile" class="fright">
+                    <option value="enabled">Enabled</option>
+                    <option value="disabled">Disabled</option>
+                </select>
+
+            </fieldset>
+            <p class="tip">Download .json file with every audio file that contains additional file metadata like album and album artwork. For use with NPM project Lute-Compile.</p>
         </section>
         <!-- Footer -->
         <footer>
