--- a/options.html
+++ b/options.html
@@ -69,14 +69,14 @@
             <h3 class="subtitle">Advanced</h3>
             <!-- Lute Compile -->
             <fieldset class="setting">
-                <label>Lute-Compile</label>
+                <label>JSON to Metadata</label>
                 <select id="lute-compile" class="fright">
                     <option value="enabled">Enabled</option>
                     <option value="disabled">Disabled</option>
                 </select>
 
             </fieldset>
-            <p class="tip">Download .json file with every audio file that contains additional file metadata like album and album artwork. For use with NPM project Lute-Compile.</p>
+            <p class="tip">Download .json file with every audio file that contains additional file metadata like album and album artwork. For use with NPM project json-to-metadata.</p>
         </section>
         <!-- Footer -->
         <footer>
