now downloads into '_lute' download folder

--- a/options/index.html
+++ b/options/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Lute Options</title>
     <!--<script src="/js/luteIcon.js"></script>-->
-    <script src="/options/component.js"></script>
+    <script src="/options/script.js"></script>
     <link rel="stylesheet" type="text/css" href="/options/styles.css">
 </head>
 
